# autonomous-soaring

./: CMakeLists.txt  README.md  Requirements.txt  Todo.txt  crosscompile.txt  instrutions.txt  main.cpp  mainraspy  mav.parm  mav.tlog  mav.tlog.raw
Calculations/: Energie.mlx  Energy_Testing_Calculations.mlx  ShortFlight.csv  Windestimation.mlx  untitled.mlx
Calculations/Sim_daten/: 2023-11-23 22-29-21.csv  2024-02-13 23-32-40.csv  2024-02-13 23-47-28.csv  CVC_creator.mlx  ShortFlight.csv
MavlinkTest/: CMakeLists.txt  UML_Generator.sh  main.cpp  output_diagram.puml  output_diagram_svae.puml
MavlinkTest/SupportFunctions/: CircularBuffer.cpp  CircularBuffer.h  DataDistributor.cpp  DataDistributor.h  EnergieCalculator.cpp  EnergieCalculator.h  Energy.cpp  Energy.h  EnergyCalculator.cpp  EnergyCalculator.h  MavlinkHeader.h  MavlinkHeartbeat.cpp  MavlinkHeartbeat.h  MavlinkSend.cpp  MavlinkSend.h  RollingBuffer.cpp  RollingBuffer.h  SenderClass.cpp  SenderClass.h  SenderClass_Interface.h  SenderClass_UDP.cpp  SenderClass_UDP.h  SerialPort.cpp  SerialPort.h
MavlinkTest/UML_Diagrams/: CircularBuffer.puml  DataDistributor.puml  Energy.puml  EnergyCalculator.puml  MavlinkHeader.puml  SenderClass_Interface.puml  SenderClass_UDP.puml  SerialPort.puml  classes.puml  test.puml
MavlinkTest/test/: DataDistributorTest.cpp  Energytester.cpp  Serialporttester.cpp  buffertest.cpp
Pi_SPI/: CMakeLists.txt  main.cpp  spi_example
